# gazelle_d

./: .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  renovate.json
.github/workflows/: main.yml
d/: BUILD.bazel  d.go  d_test.go
gazelle/d/: BUILD.bazel  d.go  d_test.go
tools/: BUILD.bazel
