module(
    name = "gazelle_d",
    version = "0.1.0",
)

bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_d", version = "0.9.0")

bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(
    go_mod = "//:go.mod",
)
