module(
    name = "gazelle_d",
    version = "0.1.0",
)

bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "rules_d", version = "0.10.1")
bazel_dep(name = "rules_go", version = "0.59.0")

bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)

local_path_override(
    module_name = "rules_d",
    path = "../../bazel-contrib/rules_d",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.25.9",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "github.com/bazelbuild/buildtools",
    sum = "h1:njQAmjTv/YHRm/0Lfv9DXHFZ4MdT2IA/RKHTnqZkgDw=",
    version = "v0.0.0-20250930140053-2eb4fccefb52",
)
use_repo(go_deps, "com_github_bazelbuild_buildtools")
