load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "d",
    srcs = ["d.go"],
    importpath = "github.com/dcarp/gazelle_d/gazelle/d",
    visibility = ["//visibility:public"],
    deps = [
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

go_test(
    name = "d_test",
    srcs = ["d_test.go"],
    embed = [":d"],
    deps = [
        "@gazelle//config",
        "@gazelle//language",
        "@gazelle//rule",
    ],
)
